Refactor costmap to be stored as 1D array so publishing to ROS is easier. Implemented publishing of the costmap to UInt8MultiArray message

--- a/beboop_vision/CMakeLists.txt
+++ b/beboop_vision/CMakeLists.txt
@@ -11,8 +11,9 @@ find_package(rclcpp REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(cv_bridge REQUIRED)
+find_package(std_msgs REQUIRED)
 
-set(dependencies rclcpp OpenCV sensor_msgs cv_bridge)
+set(dependencies rclcpp OpenCV sensor_msgs cv_bridge std_msgs)
 
 
 # Install executables
