--- a/beboop_vision/package.xml
+++ b/beboop_vision/package.xml
@@ -15,6 +15,7 @@
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>cv_bridge</depend>
 
   <export>
