--- a/src/redshell_io/CMakeLists.txt
+++ b/src/redshell_io/CMakeLists.txt
@@ -1,39 +1,19 @@
 cmake_minimum_required(VERSION 3.8)
-project(beboop_launch)
+project(redshell_io)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# Resolve dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(nav_msgs REQUIRED)
-set(dependencies rclcpp geometry_msgs std_msgs nav_msgs)
+set(dependencies rclcpp geometry_msgs)
 
-
-# Install executables
-add_executable(vs_control src/vs_control.cpp)
-ament_target_dependencies(vs_control ${dependencies})
-install(TARGETS vs_control
+add_executable(motor_interface src/motor_interface.cpp)
+ament_target_dependencies(motor_interface ${dependencies})
+install(TARGETS motor_interface
         DESTINATION lib/${PROJECT_NAME})
-
-add_executable(occupancy_aggregator src/occupancy_aggregator.cpp)
-ament_target_dependencies(occupancy_aggregator ${dependencies})
-install(TARGETS occupancy_aggregator
-        DESTINATION lib/${PROJECT_NAME})
-
-# Resolve and install include filepaths
-include_directories(src include)
-
-# Install launch files
-install(
-  DIRECTORY launch
-  DESTINATION share/${PROJECT_NAME}/
-)
-
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
