Add initial state estimation param file. Rework manual sitl launch file from xml to python.

--- a/src/beboop_launch/CMakeLists.txt
+++ b/src/beboop_launch/CMakeLists.txt
@@ -30,7 +30,7 @@ include_directories(src include)
 
 # Install launch files
 install(
-  DIRECTORY launch
+  DIRECTORY launch config
   DESTINATION share/${PROJECT_NAME}/
 )
 
