Refactor of occupancy grid aggregator to utilise tf2 transformations between maps. Refactor of aggregator into isolated package

--- a/src/occupancy_grid_aggregator/CMakeLists.txt
+++ b/src/occupancy_grid_aggregator/CMakeLists.txt
@@ -1,32 +1,30 @@
 cmake_minimum_required(VERSION 3.8)
-project(beboop_launch)
+project(occupancy_grid_aggregator)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# Resolve dependencies
+# Resolve Dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
-find_package(std_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
-set(dependencies rclcpp geometry_msgs std_msgs nav_msgs)
+set(dependencies rclcpp tf2_ros tf2 tf2_geometry_msgs geometry_msgs nav_msgs)
 
 
-# Install executables
-add_executable(vs_control src/vs_control.cpp)
-ament_target_dependencies(vs_control ${dependencies})
-install(TARGETS vs_control
+add_executable(aggregator_node src/aggregator_node.cpp src/aggregator.cpp)
+ament_target_dependencies(aggregator_node ${dependencies})
+install(TARGETS aggregator_node
         DESTINATION lib/${PROJECT_NAME})
 
-# Resolve and install include filepaths
-include_directories(src include)
 
-# Install launch files
-install(
-  DIRECTORY launch config
-  DESTINATION share/${PROJECT_NAME}/
+# Resolve and install include filepaths
+include_directories(
+  src
 )
 
 
