--- a/src/redshell_bringup/CMakeLists.txt
+++ b/src/redshell_bringup/CMakeLists.txt
@@ -25,7 +25,7 @@ include_directories(src include)
 
 # Install launch files
 install(
-  DIRECTORY launch config
+  DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}/
 )
 
