--- a/src/state_estimation/package.xml
+++ b/src/state_estimation/package.xml
@@ -13,6 +13,7 @@
   <test_depend>ament_lint_common</test_depend>
 
   <depend>robot_localization</depend>
+  <depend>occupancy_grid_aggregator_srv</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
