--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/ROS-TCP-Endpoint"]
 	path = src/ROS-TCP-Endpoint
-	url = git@github.com:Unity-Technologies/ROS-TCP-Endpoint.git
+	url = https://github.com/Unity-Technologies/ROS-TCP-Endpoint.git
