--- a/src/redshell_io/CMakeLists.txt
+++ b/src/redshell_io/CMakeLists.txt
@@ -8,23 +8,12 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
-set(dependencies rclcpp geometry_msgs)
+set(DEPENDENICES rclcpp geometry_msgs)
 
 add_executable(motor_interface src/motor_interface.cpp)
-ament_target_dependencies(motor_interface ${dependencies})
+target_include_directories(motor_interface PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include ${CMAKE_CURRENT_LIST_DIR}/include/redshell_messages/include)
+ament_target_dependencies(motor_interface ${DEPENDENICES})
 install(TARGETS motor_interface
-        DESTINATION lib/${PROJECT_NAME})
-
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+    DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
