Added message handling for IMU and encoder messages

--- a/src/redshell_io/CMakeLists.txt
+++ b/src/redshell_io/CMakeLists.txt
@@ -8,7 +8,8 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
-set(DEPENDENICES rclcpp geometry_msgs)
+find_package(sensor_msgs REQUIRED)
+set(DEPENDENICES rclcpp geometry_msgs sensor_msgs)
 
 add_executable(redshell_interface src/redshell_interface.cpp)
 target_include_directories(redshell_interface PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include ${CMAKE_CURRENT_LIST_DIR}/include/redshell_messages/include)
