--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,6 +12,13 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get -y update \
     && sudo apt-get install -y libopencv-dev \
     && rm -rf /var/lib/apt/lists/*
 
+RUN DEBIAN_FRONTEND=noninteractive apt-get -y update \
+    && apt-get install -y wget \
+    && apt-get install -y unzip \
+    && wget https://download.pytorch.org/libtorch/nightly/cpu/libtorch-shared-with-deps-latest.zip \
+    && unzip libtorch-shared-with-deps-latest.zip \
+    && rm -rf /var/lib/apt/lists/*
+
 # Additional ROS packages
 RUN DEBIAN_FRONTEND=noninteractive apt-get -y update \
     && apt-get -y install ros-${ROS_DISTRO}-teleop-twist-joy ros-${ROS_DISTRO}-robot-localization \
