Fix vision driver params for working manual control

--- a/src/vision/CMakeLists.txt
+++ b/src/vision/CMakeLists.txt
@@ -16,9 +16,9 @@ find_package(sensor_msgs REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
-find_package(Torch REQUIRED)
+#find_package(Torch REQUIRED)
 
-set(dependencies rclcpp OpenCV sensor_msgs cv_bridge std_msgs nav_msgs Torch)
+set(dependencies rclcpp OpenCV sensor_msgs cv_bridge std_msgs nav_msgs)# Torch)
 
 # Install executables
 add_executable(track_error_driver src/track_error_driver.cpp src/vision_driver.cpp)
@@ -36,11 +36,11 @@ ament_target_dependencies(image_capture ${dependencies})
 install(TARGETS image_capture
         DESTINATION lib/${PROJECT_NAME})
 
-add_executable(arrow_classification src/classification/arrow_classification.cpp)
-ament_target_dependencies(arrow_classification ${dependencies})
+# add_executable(arrow_classification src/classification/arrow_classification.cpp)
+# ament_target_dependencies(arrow_classification ${dependencies})
 # target_link_libraries(arrow_classification ${TORCH_LIBRARIES})
-install(TARGETS arrow_classification
-        DESTINATION lib/${PROJECT_NAME})
+# install(TARGETS arrow_classification
+#         DESTINATION lib/${PROJECT_NAME})
 
 # Resolve and install include filepaths
 include_directories(
