--- a/src/control/package.xml
+++ b/src/control/package.xml
@@ -11,6 +11,7 @@
 
   <depend>rclcpp</depend>
   <depend>nav_msgs</depend>
+  <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>tf2_ros</depend>
 
